--- a/app/src/main/res/layout/page_editor_page_element_list.xml
+++ b/app/src/main/res/layout/page_editor_page_element_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.study.hancom.sharephototest.view.PageListView
+<com.study.hancom.sharephototest.view.PageElementListView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/page_list_view"
     android:layout_width="match_parent"
