--- a/app/src/main/res/layout/page_editor_page_element_list_item_grid.xml
+++ b/app/src/main/res/layout/page_editor_page_element_list_item_grid.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:text="TextView"
+        android:text="@string/page_editor_page_element_grid_default_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="@dimen/page_editor_page_element_grid_font_size"
