--- a/app/src/main/res/layout/page_editor_page_element_list_item_grid.xml
+++ b/app/src/main/res/layout/page_editor_page_element_list_item_grid.xml
@@ -15,6 +15,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:numColumns="auto_fit"
+        android:verticalSpacing="4dp"
+        android:horizontalSpacing="4dp"
         android:columnWidth="@dimen/page_editor_page_element_grid_column_width">
     </com.study.hancom.sharephototest.view.PageElementGridView>
 
