--- a/app/src/main/res/layout/page_editor_page_element_list_item_grid_item.xml
+++ b/app/src/main/res/layout/page_editor_page_element_list_item_grid_item.xml
@@ -1,14 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/item_grid_custom_text"
+    <ImageView
+        android:id="@+id/item_grid_image"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:drawableTop="@mipmap/ic_launcher"
-        android:gravity="center"
+        android:layout_height="128dp"
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop" />
+
+    <TextView
+        android:background="@color/colorWhite"
+        android:text="@string/page_editor_page_element_grid_default_text"
+        android:id="@+id/item_grid_text"
+        android:layout_margin="3dp"
+        android:textSize="15sp"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:textAlignment="center"
+        android:layout_gravity="start|top"
         android:textStyle="bold" />
 
-</LinearLayout>
+</FrameLayout>
