터치 이벤트 걷어낸 상태

--- a/app/src/main/res/layout/page_editor_page_element_list_item_grid.xml
+++ b/app/src/main/res/layout/page_editor_page_element_list_item_grid.xml
@@ -17,7 +17,8 @@
         android:numColumns="auto_fit"
         android:verticalSpacing="4dp"
         android:horizontalSpacing="4dp"
-        android:columnWidth="@dimen/page_editor_page_element_grid_column_width">
+        android:columnWidth="@dimen/page_editor_page_element_grid_column_width"
+        android:drawSelectorOnTop="true">
     </com.study.hancom.sharephototest.view.PageElementGridView>
 
 </LinearLayout>
