다중 선택 모드

--- a/app/src/main/res/layout/page_editor_page_element_list_item_grid_item.xml
+++ b/app/src/main/res/layout/page_editor_page_element_list_item_grid_item.xml
@@ -10,6 +10,14 @@
         android:adjustViewBounds="true"
         android:scaleType="centerCrop" />
 
+    <CheckBox
+        android:id="@+id/item_grid_checkbox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|top"
+        android:focusable="false"
+        android:clickable="false" />
+
     <TextView
         android:background="@color/colorWhite"
         android:text="@string/page_editor_page_element_grid_default_text"
