--- a/app/src/main/res/layout/gallery_picture_grid_item.xml
+++ b/app/src/main/res/layout/gallery_picture_grid_item.xml
@@ -22,6 +22,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="start|top"
-        android:clickable="false" />"
+        android:clickable="false" />
 
 </FrameLayout>
