--- a/app/src/main/res/layout/page_editor_page_element_list_item_grid.xml
+++ b/app/src/main/res/layout/page_editor_page_element_list_item_grid.xml
@@ -3,12 +3,40 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <TextView
-        android:text="@string/page_editor_page_element_grid_default_text"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="@dimen/page_editor_page_element_grid_font_size"
-        android:id="@+id/textView" />
+        android:layout_height="match_parent">
+        <TextView
+            android:text="@string/page_editor_page_element_grid_default_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/page_editor_page_element_grid_font_size"
+            android:id="@+id/textView"
+            android:layout_gravity="center_vertical|start"/>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|end">
+            <Button
+                android:text="미리보기"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/button1" />
+            <Button
+                android:text="레이아웃 변경"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/button2" />
+            <Button
+                android:text="삭제"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/button3" />
+        </LinearLayout>
+
+    </FrameLayout>
 
     <com.study.hancom.sharephototest.view.PageElementGridView
         android:id="@+id/custom_grid_view"
@@ -17,8 +45,6 @@
         android:numColumns="auto_fit"
         android:verticalSpacing="4dp"
         android:horizontalSpacing="4dp"
-        android:columnWidth="@dimen/page_editor_page_element_grid_column_width"
-        android:drawSelectorOnTop="true">
-    </com.study.hancom.sharephototest.view.PageElementGridView>
+        android:columnWidth="@dimen/page_editor_page_element_grid_column_width" />
 
 </LinearLayout>
