--- a/app/src/main/res/layout/page_editor_list_item.xml
+++ b/app/src/main/res/layout/page_editor_list_item.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:orientation="vertical"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_weight="1">
 
     <ImageView
-        android:id="@+id/item_grid_image"
-        android:layout_width="match_parent"
+        android:id="@+id/item_image"
+        android:layout_width="128dp"
         android:layout_height="128dp"
         android:adjustViewBounds="true"
         android:scaleType="centerCrop" />
 
     <CheckBox
-        android:id="@+id/item_grid_checkbox"
+        android:id="@+id/item_checkbox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end|top"
@@ -21,7 +23,7 @@
     <TextView
         android:background="@color/colorWhite"
         android:text="@string/page_editor_page_element_grid_default_text"
-        android:id="@+id/item_grid_text"
+        android:id="@+id/item_text"
         android:layout_margin="3dp"
         android:textSize="15sp"
         android:layout_width="20dp"
