--- a/app/src/main/res/layout/page_editor_list_item.xml
+++ b/app/src/main/res/layout/page_editor_list_item.xml
@@ -3,12 +3,13 @@
     android:orientation="vertical"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:padding="3dp"
     android:layout_weight="1">
 
     <ImageView
         android:id="@+id/item_image"
-        android:layout_width="128dp"
-        android:layout_height="128dp"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
         android:adjustViewBounds="true"
         android:scaleType="centerCrop" />
 
@@ -22,7 +23,6 @@
 
     <TextView
         android:background="@color/colorWhite"
-        android:text="@string/page_editor_page_element_grid_default_text"
         android:id="@+id/item_text"
         android:layout_margin="3dp"
         android:textSize="15sp"
