--- a/app/src/main/res/menu/gallery_action_bar.xml
+++ b/app/src/main/res/menu/gallery_action_bar.xml
@@ -3,8 +3,7 @@
 
     <item
         android:id="@+id/action_next"
-        android:icon="@drawable/next"
-        android:title="@string/action_next"
+        android:title="@string/action_gallery_next"
         app:showAsAction="always"/>
 
 </menu>
