--- a/app/src/main/res/layout/page_editor_main.xml
+++ b/app/src/main/res/layout/page_editor_main.xml
@@ -1,13 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:id="@+id/activity_main"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/activity_main">
+    android:orientation="vertical">
 
-    <ListView
-        android:scrollingCache="false"
-        android:id="@+id/page_list_view"
+    <LinearLayout
+        android:id="@+id/element_list_fragment_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:background="@color/colorLightGray"
+        android:orientation="vertical" />
+
+    <LinearLayout
+        android:id="@+id/page_list_fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="120dp"
+        android:orientation="vertical" />
 
 </LinearLayout>
