--- a/app/src/main/res/layout/page_editor_element_list_row.xml
+++ b/app/src/main/res/layout/page_editor_element_list_row.xml
@@ -25,19 +25,19 @@
             android:gravity="end"
             android:visibility="gone">
             <Button
-                android:id="@+id/button1"
+                android:id="@+id/button_preview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="미리보기" />
 
             <Button
-                android:id="@+id/button2"
+                android:id="@+id/button_change_layout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="레이아웃 변경" />
 
             <Button
-                android:id="@+id/button3"
+                android:id="@+id/button_delete"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="삭제" />
