--- a/app/src/main/res/layout/page_editor_element_list_row.xml
+++ b/app/src/main/res/layout/page_editor_element_list_row.xml
@@ -5,20 +5,20 @@
     android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/row_header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/row_header"
+            android:id="@+id/row_header_text"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:textSize="20sp"
-            android:visibility="gone"
             android:gravity="center_vertical"/>
 
         <LinearLayout
-            android:id="@+id/row_menu"
+            android:id="@+id/row_menuHolder"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
