--- a/app/src/main/res/layout/page_editor_page_list.xml
+++ b/app/src/main/res/layout/page_editor_page_list.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v17.leanback.widget.HorizontalGridView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/page_grid_view"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:columnWidth="@dimen/page_editor_page_grid_column_width"
-    android:numColumns="auto_fit"
-    android:scrollingCache="false" />
+    android:layout_height="match_parent" />
