--- a/app/src/main/res/layout/page_editor_frame.xml
+++ b/app/src/main/res/layout/page_editor_frame.xml
@@ -1,19 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/activity_main"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
+
     <LinearLayout
         android:id="@+id/element_list_fragment_container"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="130dp"
         android:background="@color/colorLightGray"
         android:orientation="vertical" />
+
+    <Button
+        android:id="@+id/page_list_fragment_handle"
+        android:layout_width="50dp"
+        android:layout_height="20dp"
+        android:layout_gravity="bottom|center"
+        android:layout_marginBottom="130dp"
+        android:background="@color/colorAccent" />
+
     <LinearLayout
         android:id="@+id/page_list_fragment_container"
         android:layout_width="match_parent"
         android:layout_height="130dp"
+        android:layout_gravity="bottom|center"
         android:orientation="vertical" />
-</LinearLayout>
+
+</FrameLayout>
