--- a/app/src/main/res/layout/album_overview_grid_item.xml
+++ b/app/src/main/res/layout/album_overview_grid_item.xml
@@ -26,9 +26,9 @@
 
     </FrameLayout>
 
-    <WebView
+    <com.study.hancom.sharephototest.view.A4SizeWebView
         android:id="@+id/page_web_view"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
 </LinearLayout>
