--- a/app/src/main/res/layout/album_editor_page_list_item.xml
+++ b/app/src/main/res/layout/album_editor_page_list_item.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/test"
     android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <WebView
+    android:layout_width="wrap_content"
+    android:layout_height="130dp">
+    <com.study.hancom.sharephototest.view.A4SizeWebView
         android:id="@+id/page_list_item_webview"
         android:layout_width="wrap_content"
         android:layout_height="match_parent">
-    </WebView>
+    </com.study.hancom.sharephototest.view.A4SizeWebView>
 </LinearLayout>
