--- a/app/src/main/res/layout/gallery_full_size_picture_main.xml
+++ b/app/src/main/res/layout/gallery_full_size_picture_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical" >
@@ -8,7 +8,7 @@
         android:id="@+id/show_image_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="fitCenter"
-        android:adjustViewBounds="true"/>
+        android:scaleType="centerInside"
+        android:contentDescription="ImageViewDialog"/>
 
-</RelativeLayout>
+</LinearLayout>
