--- a/app/src/main/res/layout/gallery_picture_grid_item.xml
+++ b/app/src/main/res/layout/gallery_picture_grid_item.xml
@@ -15,7 +15,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
-        android:text="확대" />
+        android:text="@string/button_scale" />
 
     <CheckBox
         android:id="@+id/gallery_selected_image"
