--- a/app/src/main/res/menu/gallery_multiple_select_main.xml
+++ b/app/src/main/res/menu/gallery_multiple_select_main.xml
@@ -4,6 +4,7 @@
     <item
         android:id="@+id/action_next"
         android:title="@string/action_gallery_next"
+        android:enabled="false"
         app:showAsAction="always"/>
 
 </menu>
