--- a/app/src/main/res/layout/album_overview_main.xml
+++ b/app/src/main/res/layout/album_overview_main.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <com.study.hancom.sharephototest.view.AutoFitRecyclerView
+    <com.study.hancom.sharephototest.view.AutoFitRecyclerGridView
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/album_overview_grid"
         android:layout_width="match_parent"
