--- a/app/src/main/res/layout/gallery_full_size_picture_main.xml
+++ b/app/src/main/res/layout/gallery_full_size_picture_main.xml
@@ -1,12 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical" >
+    android:layout_height="fill_parent" >
 
-    <com.study.hancom.sharephototest.view.TouchImageView
+    <ImageView
         android:id="@+id/show_image_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
-</LinearLayout>
+    <Button
+        android:text="◀"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/button_previous" />
+
+    <Button
+        android:text="▶"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_alignParentEnd="true"
+        android:id="@+id/button_next" />
+
+</RelativeLayout>
