--- a/app/src/main/res/layout/gallery_picture_grid_item.xml
+++ b/app/src/main/res/layout/gallery_picture_grid_item.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="128dip">
+    android:layout_width="130dp"
+    android:layout_height="130dp">
 
     <ImageView
         android:id="@+id/gallery_image"
         android:layout_width="match_parent"
-        android:layout_height="128dip"
+        android:layout_height="match_parent"
         android:adjustViewBounds="true"
         android:scaleType="centerCrop" />
 
