--- a/app/src/main/res/layout/gallery_picture_main.xml
+++ b/app/src/main/res/layout/gallery_picture_main.xml
@@ -6,13 +6,11 @@
 
         <GridView xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/gallery_image_grid_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:horizontalSpacing="4dip"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:horizontalSpacing="2dip"
             android:numColumns="auto_fit"
-            android:padding="4dip"
-            android:stretchMode="columnWidth"
-            android:verticalSpacing="4dip" />
+            android:verticalSpacing="2dip" />
 
 </LinearLayout>
