--- a/app/src/main/res/menu/gallery_full_size_picture_main.xml
+++ b/app/src/main/res/menu/gallery_full_size_picture_main.xml
@@ -2,8 +2,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/action_select_picture"
-        android:title="@string/action_gallery_full_size_selection"
+        android:id="@+id/action_check"
+        android:title="@string/action_gallery_full_size_select"
+        app:actionViewClass="android.widget.CheckBox"
         app:showAsAction="always"/>
 
 </menu>
