--- a/app/src/main/res/layout/album_editor_page_full_size_webview_main.xml
+++ b/app/src/main/res/layout/album_editor_page_full_size_webview_main.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:gravity="center">
 
-    <com.study.hancom.sharephototest.view.A4SizeWebView
+    <com.study.hancom.sharephototest.view.HDSizeWebView
         android:id="@+id/show_webview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
