--- a/app/src/main/res/layout/album_editor_page_list_item.xml
+++ b/app/src/main/res/layout/album_editor_page_list_item.xml
@@ -2,10 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="wrap_content"
-    android:layout_height="130dp">
-    <com.study.hancom.sharephototest.view.A4SizeWebView
+    android:layout_height="wrap_content">
+    <com.study.hancom.sharephototest.view.HDSizeWebView
         android:id="@+id/page_list_item_webview"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent">
-    </com.study.hancom.sharephototest.view.A4SizeWebView>
+        android:layout_width="100dp"
+        android:layout_height="wrap_content" />
 </LinearLayout>
