--- a/app/src/main/res/layout/album_editor_page_list_vertical.xml
+++ b/app/src/main/res/layout/album_editor_page_list_vertical.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.RecyclerView
+<com.study.hancom.sharephototest.view.AutoFitRecyclerGridView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/page_grid_view_vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/page_grid_view_vertical"/>
+    android:layout_height="match_parent" />
