--- a/app/src/main/res/layout/album_overview_grid_item.xml
+++ b/app/src/main/res/layout/album_overview_grid_item.xml
@@ -26,7 +26,7 @@
 
     </FrameLayout>
 
-    <com.study.hancom.sharephototest.view.A4SizeWebView
+    <com.study.hancom.sharephototest.view.HDSizeWebView
         android:id="@+id/page_web_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
