--- a/app/src/main/res/layout/gallery_picture_main.xml
+++ b/app/src/main/res/layout/gallery_picture_main.xml
@@ -10,7 +10,9 @@
             android:layout_height="match_parent"
             android:gravity="center_vertical"
             android:horizontalSpacing="2dip"
+            android:columnWidth="110dp"
             android:numColumns="auto_fit"
+            android:stretchMode="columnWidth"
             android:verticalSpacing="2dip" />
 
 </LinearLayout>
