--- a/app/src/main/res/layout/album_editor_element_grid_item_content.xml
+++ b/app/src/main/res/layout/album_editor_element_grid_item_content.xml
@@ -1,37 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="3dp"
-    android:layout_weight="1">
+    android:layout_height="wrap_content">
 
-    <ImageView
-        android:id="@+id/item_content_image"
-        android:layout_width="match_parent"
-        android:layout_height="120dp"
-        android:adjustViewBounds="true"
-        android:scaleType="centerCrop" />
-
-    <CheckBox
-        android:id="@+id/item_content_checkbox"
+    <FrameLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="end|top"
-        android:focusable="false"
-        android:clickable="false" />
+        android:layout_centerInParent="true">
 
-    <TextView
-        android:background="@color/colorWhite"
-        android:id="@+id/item_content_text"
-        android:layout_margin="3dp"
-        android:textSize="15sp"
-        android:paddingRight="5dp"
-        android:paddingLeft="5dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:layout_gravity="start|top"
-        android:textStyle="bold" />
+        <ImageView
+            android:id="@+id/item_content_image"
+            android:layout_width="110dp"
+            android:layout_height="110dp"
+            android:adjustViewBounds="true"
+            android:scaleType="centerCrop" />
 
-</FrameLayout>
+        <CheckBox
+            android:id="@+id/item_content_checkbox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end|top"
+            android:clickable="false"
+            android:focusable="false" />
+
+        <TextView
+            android:id="@+id/item_content_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="start|top"
+            android:layout_margin="3dp"
+            android:background="@color/colorWhite"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            android:textAlignment="center"
+            android:textSize="15sp"
+            android:textStyle="bold" />
+
+    </FrameLayout>
+
+</RelativeLayout>
