--- a/app/src/main/res/layout/album_editor_horizontal_page_list.xml
+++ b/app/src/main/res/layout/album_editor_horizontal_page_list.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.study.hancom.sharephototest.view.AutoFitRecyclerGridView
+<android.support.v7.widget.RecyclerView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/page_list_view"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:columnWidth="120dp" />
+    android:layout_height="match_parent" />
