--- a/app/src/main/res/layout/album_editor_page_full_size_webview_main.xml
+++ b/app/src/main/res/layout/album_editor_page_full_size_webview_main.xml
@@ -11,10 +11,10 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:gravity="center|center_vertical">
-        <com.study.hancom.sharephototest.view.HDSizeWebView
+        <com.study.hancom.sharephototest.view.CustomWebView
             android:id="@+id/show_webview"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:scaleType="centerInside"/>
     </com.study.hancom.sharephototest.view.ScalableLinearLayout>
 
