--- a/app/src/main/res/layout/album_overview_grid_item.xml
+++ b/app/src/main/res/layout/album_overview_grid_item.xml
@@ -27,7 +27,7 @@
 
     </LinearLayout>
 
-    <com.study.hancom.sharephototest.view.HDSizeWebView
+    <com.study.hancom.sharephototest.view.CustomWebView
         android:id="@+id/page_web_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
