--- a/app/src/main/res/layout/album_editor_new_layout_main.xml
+++ b/app/src/main/res/layout/album_editor_new_layout_main.xml
@@ -18,16 +18,11 @@
             android:padding="5dip"/>
     </LinearLayout>
 
-    <GridView xmlns:android="http://schemas.android.com/apk/res/android"
+
+    <com.study.hancom.sharephototest.view.AutoFitRecyclerGridView
         android:id="@+id/new_layout_grid_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center_vertical"
-        android:horizontalSpacing="2dip"
-        android:columnWidth="100dp"
-        android:numColumns="auto_fit"
-        android:stretchMode="columnWidth"
-        android:listSelector="@drawable/selector"
-        android:verticalSpacing="2dip" />
+        android:columnWidth="100dp" />
 
 </LinearLayout>
