--- a/app/src/main/res/layout/album_editor_page_list_item.xml
+++ b/app/src/main/res/layout/album_editor_page_list_item.xml
@@ -1,30 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="2dp">
+    android:layout_height="wrap_content">
 
-    <FrameLayout
+    <com.study.hancom.sharephototest.view.CustomWebView
+        android:id="@+id/page_list_item_webview"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content" />
 
-        <com.study.hancom.sharephototest.view.HDSizeWebView
-            android:id="@+id/page_list_item_webview"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:id="@+id/page_list_item_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="start|top"
-            android:layout_margin="3dp"
-            android:background="@color/colorWhite"
-            android:paddingLeft="5dp"
-            android:paddingRight="5dp"
-            android:textAlignment="center"
-            android:textSize="15sp"
-            android:textStyle="bold" />
+    <TextView
+        android:id="@+id/page_list_item_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="start|top"
+        android:layout_margin="3dp"
+        android:background="@color/colorWhite"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
+        android:textAlignment="center"
+        android:textSize="15sp"
+        android:textStyle="bold" />
 
-    </FrameLayout>
-</LinearLayout>
+</FrameLayout>
