--- a/app/src/main/res/layout/album_editor_main.xml
+++ b/app/src/main/res/layout/album_editor_main.xml
@@ -37,7 +37,7 @@
         <LinearLayout
             android:id="@+id/horizontal_page_list_fragment_container"
             android:layout_width="match_parent"
-            android:layout_height="130dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="bottom|center"
             android:orientation="vertical" />
     </LinearLayout>
