--- a/app/src/main/res/layout/album_editor_page_list_item.xml
+++ b/app/src/main/res/layout/album_editor_page_list_item.xml
@@ -6,7 +6,7 @@
     <com.study.hancom.sharephototest.view.CustomWebView
         android:id="@+id/page_list_item_webview"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent" />
 
     <TextView
         android:id="@+id/page_list_item_text"
