--- a/app/src/main/res/layout/album_overview_grid_item.xml
+++ b/app/src/main/res/layout/album_overview_grid_item.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:layout_margin="2dp">
+    android:layout_margin="2dp"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -24,12 +24,11 @@
             android:layout_height="match_parent"
             android:gravity="center_vertical"
             android:textSize="20sp" />
-
     </LinearLayout>
 
     <com.study.hancom.sharephototest.view.CustomWebView
         android:id="@+id/page_web_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="match_parent" />
 
 </LinearLayout>
