--- a/app/src/main/res/layout/album_editor_main.xml
+++ b/app/src/main/res/layout/album_editor_main.xml
@@ -1,7 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/page_editor_main_frame"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
-</LinearLayout>
+    android:layout_height="match_parent">
+
+    <LinearLayout
+        android:id="@+id/element_list_fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="130dp"
+        android:orientation="vertical" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="true"
+        android:gravity="bottom"
+        android:orientation="vertical">
+
+        <Button
+            android:id="@+id/page_list_fragment_handle"
+            android:layout_width="50dp"
+            android:layout_height="20dp"
+            android:layout_gravity="bottom|center"
+            android:background="@color/colorAccent" />
+
+        <LinearLayout
+            android:id="@+id/page_list_fragment_container"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_gravity="bottom|center"
+            android:layout_weight="1"
+            android:background="@color/colorWhite"
+            android:orientation="vertical"
+            android:visibility="gone" />
+
+        <LinearLayout
+            android:id="@+id/horizontal_page_list_fragment_container"
+            android:layout_width="match_parent"
+            android:layout_height="130dp"
+            android:layout_gravity="bottom|center"
+            android:orientation="vertical" />
+    </LinearLayout>
+
+</RelativeLayout>
