--- a/app/src/main/res/layout/album_overview_grid_item.xml
+++ b/app/src/main/res/layout/album_overview_grid_item.xml
@@ -2,12 +2,21 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:layout_margin="2dp">
 
-    <FrameLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal">
+
+        <CheckBox
+            android:id="@+id/page_checkbox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="start|top"
+            android:clickable="false"
+            android:focusable="false" />
 
         <TextView
             android:id="@+id/page_header_text"
@@ -16,19 +25,11 @@
             android:gravity="center_vertical"
             android:textSize="20sp" />
 
-        <CheckBox
-            android:id="@+id/page_checkbox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end|top"
-            android:clickable="false"
-            android:focusable="false" />
+    </LinearLayout>
 
-    </FrameLayout>
-
-    <com.study.hancom.sharephototest.view.A4SizeWebView
+    <com.study.hancom.sharephototest.view.CustomWebView
         android:id="@+id/page_web_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
